<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TIC AC Controller</string>
    <string name="Password">Contraseña</string>
    <string name="Email">Correo electrónico</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnRegister">Registrarse</string>
    <string name="Pwd" tools:ignore="MissingTranslation">Confirmar contraseña</string>
    <string name="btnCount" tools:ignore="MissingTranslation">Crear cuenta</string>
    <string name="Forgot" tools:ignore="MissingTranslation">¿Olvidaste tu contraseña?</string>
    <string name="SingIn" tools:ignore="MissingTranslation">Iniciar sesión</string>
    <string name="ReadyAccount" tools:ignore="MissingTranslation">¿Tienes una cuenta?</string>
    <string name="txtSingUp" tools:ignore="MissingTranslation">No tener cuenta</string>
    <string name="From_UTe" tools:ignore="MissingTranslation">From UTE</string>


</resources>
